# OllyUW

./: .env.example  .gitignore  FRONTEND_SPEC.md  MODEL_DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md  main.py  plan.md  pyproject.toml
backend/: debug_sandbox.py  main.py  pyproject.toml
backend/migrations/: 001_initial_schema.sql  002_add_session_id.sql  003_restore_messages.sql  004_add_message_model.sql  005_second_computer_pivot.sql  006_computer_runtime.sql  007_desktop_url.sql  008_sessions.sql  009_message_tool_calls.sql  010_message_parts.sql
backend/src/: app.py  config.py  dependencies.py
backend/src/controllers/: auth_controller.py  computer_controller.py  connection_controller.py  conversation_controller.py  file_controller.py  health_controller.py  project_controller.py  session_controller.py  upload_controller.py  vault_controller.py
backend/src/middleware/: error_handler.py  logging_middleware.py
backend/src/models/: auth.py  computer.py  connection.py  conversation.py  events.py  file.py  message.py  project.py  session.py  upload.py  vault.py
backend/src/ollyuw_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/oss_deployment/: benchmark.py  deploy_gemma_standard.py
backend/src/providers/: e2b_provider.py  llm_provider.py  local_provider.py  redis_provider.py  storage_provider.py  supabase_provider.py  unstructured_provider.py
backend/src/repositories/: computer_repository.py  (+7 more)
backend/tests/: test_agent.py  test_computer_api.py  test_defense_eval.py  test_file_service.py  test_inference.py
(+166 files in other folders)
