[project]
name = "olive-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "e2b>=2.23.0",
    "langchain-openai>=1.2.2",
    "modal>=1.4.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
