[project]
name = "ollyuw-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.7.0",
    "redis==7.4.0",
    "e2b>=2.0.0",
    "e2b-desktop>=2.3.1",
    "python-dotenv>=1.0.1",
    "langchain-openai>=1.2.0",
    "langchain-core>=0.3.0",
    "supabase>=2.0.0",
    "modal>=1.4.3",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "unstructured-client>=0.26.0",
    "cryptography>=48.0.0",
    "openai>=2.38.0",
    "tiktoken>=0.13.0",
    "mem0ai>=2.0.4",
    "parallel-web>=0.6.0",
    "langfuse>=4.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
